fixed title spacing

--- a/styles/input.scss
+++ b/styles/input.scss
@@ -60,7 +60,7 @@ $collection-pointer:        url('../assets/svg/pointer.svg'), auto;
       flex-direction: column;
       width: fit-content;
       position: absolute;
-      right: -1.5vw;
+      right: -1.45vw;
       .header-title{
         margin-top: 2.4vw;
         margin-bottom: 1.4vw;
